<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Family Restaurant Courses Selector</string>
    <string name="action_settings">Settings</string>
    <string name="hello_welcome">Welcome!</string>
    <string name="done">OK</string>
    <string name="cancel">Back</string>
    <string name="add">Add</string>
    <string name="delete_person">Delete User</string>
    <string name="add_person">Add User</string>
    <string name="delete_menu">Delete Course</string>
    <string name="list_of_menu">List Of Courses</string>
    <string name="add_menu">Add Course</string>
    <string name="add_a_new_menu">Add A New Course</string>
    <string name="enter_name">Enter Name:</string>
    <string name="add_person_page">Select Users...</string>
    <string name="show_menu_page">Select Courses...</string>
    
    

</resources>