<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@color/background_color" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_person_page" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonAddPerson"
        android:layout_below="@+id/textView1" >
      
	    <LinearLayout
	        android:id="@+id/layout"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:orientation="vertical" >    
	    </LinearLayout>

	</ScrollView>

    <Button
        android:id="@+id/buttonAddPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonDone"
        android:layout_alignLeft="@+id/scroll"
        android:onClick="onClickAddPerson"
        android:text="@string/add_person" />

    <Button
        android:id="@+id/buttonDeletePerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonCancel"
        android:layout_alignRight="@+id/buttonCancel"
        android:onClick="onClickDeletePerson"
        android:text="@string/delete_person" />

    <Button
        android:id="@+id/buttonDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="onClickDone"
        android:text="@string/done" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/scroll"
        android:onClick="onClickCancel"
        android:text="@string/cancel" />
	
</RelativeLayout>